Fix header slogan out of place in mobile view

--- a/indians/static/scss/components/header.scss
+++ b/indians/static/scss/components/header.scss
@@ -68,14 +68,17 @@
         }
       }
 
-      &.slogan {
-        top: 63%;
-        width: 100%;
-        font-family: $black-ops;
-        transform: translate(-50%);
+      &.slogan, .rootslogan {
+        font-family: $titillium-web;
         font-size: 3vw;
+      }
+
+      &.slogan {
+        top: 69%;
+        width: 100%;
+        margin: 0;
+        transform: translate(-50%);
         letter-spacing: $letter-spacing-medium;
-        text-transform: capitalize;
         z-index: 1;
 
         @media screen and (min-width : 176px) and (max-width : 360px) {
@@ -85,7 +88,6 @@
 
         @media screen and (min-width : 361px) and (max-width : 640px) {
           font-size: 17px;
-          padding-top: 400px;
           bottom: 27%;
         }
 
@@ -101,11 +103,6 @@
           opacity:1;
           transition: opacity 1.2s ease-in-out .5s;
         }
-      }
-
-      &.rootslogan {
-        font-family: $titillium-web;
-        font-size: 24px;
       }
     }
 
